--- a/tamilactors.html
+++ b/tamilactors.html
@@ -285,7 +285,7 @@
             <img src="TAMIL ACTORS/TA (36).jpeg" alt="STRANGER THINGS">
             <div class="cart-controls">
                 <button class="quantity-btn" onclick="updateQuantity('TAMIL ACTORS 36', -1)">-</button>
-                <span id="quantity-TAMIL ACTORS 33" style="color: rgb(6, 6, 6);">1</span>
+                <span id="quantity-TAMIL ACTORS 36" style="color: rgb(6, 6, 6);">1</span>
                 <button class="quantity-btn" onclick="updateQuantity('TAMIL ACTORS 36', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('TAMIL ACTORS 36')">Add to Cart</button>
@@ -348,9 +348,9 @@
         <div class="card">
             <img src="TAMIL ACTORS/TA  (47).jpeg" alt="STRANGER THINGS">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('stranger-things', -1)">-</button>
-                <span id="quantity-stranger-things" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('stranger-things', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('TAMIL ACTORS 47', -1)">-</button>
+                <span id="quantity-TAMIL ACTORS 47" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('TAMIL ACTORS 47', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('TAMIL ACTORS 47')">Add to Cart</button>
         </div>
