--- a/games.html
+++ b/games.html
@@ -11,7 +11,7 @@
 
 
     <div class="side-menu" id="sideMenu">
-      <!-- <a href="#home">Home</a> -->
+       <a href="index.html">HOME</a> 
       <a href="engcollec.html">ENGLISH POSTERS</a>
       <a href="tamilactors.html">TAMIL ACTORS</a>
       <a href="avengercollec.html">AVENGERS</a>
@@ -38,9 +38,9 @@
         <div class="card">
             <img src="GAMES/games  (1).jpg" alt="CUSTOMIZED RED VELVET">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('0abe57fd-e92f-46e4-a738-f5e91d4ccafd', -1)">-</button>
-                <span id="quantity-0abe57fd-e92f-46e4-a738-f5e91d4ccafd" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('0abe57fd-e92f-46e4-a738-f5e91d4ccafd', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 1', -1)">-</button>
+                <span id="quantity-GAMES 1" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 1', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 1')">Add to Cart</button>
         </div>
@@ -48,9 +48,9 @@
         <div class="card">
             <img src="GAMES/games  (2).jpg" alt="Poster 2">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('65dfe1cb-5bac-4312-922b-10afbebcda28', -1)">-</button>
-                <span id="quantity-65dfe1cb-5bac-4312-922b-10afbebcda28" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('65dfe1cb-5bac-4312-922b-10afbebcda28', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 2', -1)">-</button>
+                <span id="quantity-GAMES 2" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 2', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 2')">Add to Cart</button>
         </div>
@@ -58,9 +58,9 @@
         <div class="card">
             <img src="GAMES/games  (3).jpg" alt="Poster 3">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('775f4bf4-cb38-4928-8ad9-8cff74d13484', -1)">-</button>
-                <span id="quantity-775f4bf4-cb38-4928-8ad9-8cff74d13484" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('775f4bf4-cb38-4928-8ad9-8cff74d13484', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 3', -1)">-</button>
+                <span id="quantity-GAMES 3" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 3', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 3')">Add to Cart</button>
         </div>
@@ -68,9 +68,9 @@
         <div class="card">
             <img src="GAMES/games  (4).jpg" alt="Poster 9">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('eae9324b-1ed8-40a2-9157-6cdb3a95288c', -1)">-</button>
-                <span id="quantity-eae9324b-1ed8-40a2-9157-6cdb3a95288c" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('eae9324b-1ed8-40a2-9157-6cdb3a95288c', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 4', -1)">-</button>
+                <span id="quantity-GAMES 4" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 4', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 4')">Add to Cart</button>
         </div>
@@ -78,18 +78,18 @@
         <div class="card">
             <img src="GAMES/games  (5).jpg" alt="Poster 10">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('Inception', -1)">-</button>
-                <span id="quantity-Inception" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('Inception', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 5', -1)">-</button>
+                <span id="quantity-GAMES 5" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 5', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 5')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="GAMES/games  (6).jpg" alt="FAST & FURIOUS 2">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('fast-furious-2', -1)">-</button>
-                <span id="quantity-fast-furious-2" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('fast-furious-2', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 6', -1)">-</button>
+                <span id="quantity-GAMES 6" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 6', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 6')">Add to Cart</button>
         </div>
@@ -107,9 +107,9 @@
         <div class="card">
             <img src="GAMES/games  (8).jpg" alt="GODFATHER">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('godfather', -1)">-</button>
-                <span id="quantity-godfather" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('godfather', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 8', -1)">-</button>
+                <span id="quantity-GAMES 8" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 8', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 8')">Add to Cart</button>
         </div>
@@ -117,9 +117,9 @@
         <div class="card">
             <img src="GAMES/games  (9).jpg" alt="HANGOVER">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('hangover', -1)">-</button>
-                <span id="quantity-hangover" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('hangover', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 9', -1)">-</button>
+                <span id="quantity-GAMES 9" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 9', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 9')">Add to Cart</button>
         </div>
@@ -127,9 +127,9 @@
         <div class="card">
             <img src="GAMES/games  (10).jpg" alt="Interstellar">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('interstellar', -1)">-</button>
-                <span id="quantity-interstellar" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('interstellar', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 10', -1)">-</button>
+                <span id="quantity-GAMES 10" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 10', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 10')">Add to Cart</button>
         </div>
@@ -137,9 +137,9 @@
         <div class="card">
             <img src="GAMES/games  (11).jpg" alt="JOHN WICK">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('john-wick', -1)">-</button>
-                <span id="quantity-john-wick" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('john-wick', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 11', -1)">-</button>
+                <span id="quantity-GAMES 11" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 11', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 11')">Add to Cart</button>
         </div>
@@ -147,9 +147,9 @@
         <div class="card">
             <img src="GAMES/games  (12).jpg" alt="MISSION IMPOSSIBLE">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('mission-impossible', -1)">-</button>
-                <span id="quantity-mission-impossible" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('mission-impossible', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 12', -1)">-</button>
+                <span id="quantity-GAMES 12" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 12', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 12')">Add to Cart</button>
         </div>
@@ -157,9 +157,9 @@
         <div class="card">
             <img src="GAMES/games  (13).jpg" alt="SHAWSHANK REDEMPTION">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('shawshank', -1)">-</button>
-                <span id="quantity-shawshank" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('shawshank', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 13', -1)">-</button>
+                <span id="quantity-GAMES 13" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 13', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 13')">Add to Cart</button>
         </div>
@@ -167,9 +167,9 @@
         <div class="card">
             <img src="GAMES/games  (27).jpg" alt="STRANGER THINGS">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('stranger-things', -1)">-</button>
-                <span id="quantity-stranger-things" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('stranger-things', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 27', -1)">-</button>
+                <span id="quantity-GAMES 27" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 27', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 27')">Add to Cart</button>
         </div>
@@ -177,9 +177,9 @@
         <div class="card">
             <img src="GAMES/games  (14).jpg" alt="THE BOYS">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('the-boys', -1)">-</button>
-                <span id="quantity-the-boys" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('the-boys', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 14', -1)">-</button>
+                <span id="quantity-GAMES 14" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 14', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 14')">Add to Cart</button>
         </div>
@@ -187,81 +187,81 @@
         <div class="card">
             <img src="GAMES/games  (15).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 15', -1)">-</button>
+                <span id="quantity-GAMES 15" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 15', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 15')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="GAMES/games  (16).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 16', -1)">-</button>
+                <span id="quantity-GAMES 16" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 16', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 16')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="GAMES/games  (18).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 18', -1)">-</button>
+                <span id="quantity-GAMES 18" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 18', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 18')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="GAMES/games  (19).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 19', -1)">-</button>
+                <span id="quantity-GAMES 19" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 19', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 19')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="GAMES/games  (20).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 20', -1)">-</button>
+                <span id="quantity-GAMES 20" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 20', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 20')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="GAMES/games  (21).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 21', -1)">-</button>
+                <span id="quantity-GAMES 21" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 21', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 21')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="GAMES/games  (22).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 22', -1)">-</button>
+                <span id="quantity-GAMES 22" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 22', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 22')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="GAMES/games  (23).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 23', -1)">-</button>
+                <span id="quantity-GAMES 23" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 23', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 23')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="GAMES/games  (24).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 24', -1)">-</button>
+                <span id="quantity-GAMES 24" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GAMES 24', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAMES 24')">Add to Cart</button>
         </div>
